# rust-wasm-wamu

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  rust-toolchain.toml
crates/cggmp/: Cargo.toml  README.md
crates/cggmp/examples/: README.md  cli.rs
crates/cggmp/src/: augmented_state_machine.rs  authorized_key_refresh.rs  identity_auth.rs  identity_rotation.rs  key_refresh.rs  keygen.rs  lib.rs  quorum_approval.rs  share_addition.rs  share_recovery_quorum.rs  share_removal.rs  sign.rs  threshold_modification.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: crypto.rs  errors.rs  identity_authed_request.rs  identity_challenge.rs  identity_rotation.rs  lib.rs  payloads.rs  quorum_approved_request.rs  share.rs  share_recovery_backup.rs  share_split_reconstruct.rs  test_utils.rs  traits.rs  utils.rs  wrappers.rs
crates/wasm-wamu/: Cargo.toml
crates/wasm-wamu/src/: keygen.rs  lib.rs
