[package]
name = "wasm-wamu"
version = "0.1.0"
authors = ["phuocnd <ducphuoc.t9@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
k256 = "0.13.1"
getrandom = { version = "0.2", features = ["js"] }
wamu-core = { path = "../core", version = "0.1" }
wamu-cggmp = { path = "../cggmp", version = "0.1" }


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
rand = "0.8.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
wamu-core = { path = "../core", version = "0.1", features = ["dev"] }
round-based = { version = "0.2.0", features = ["dev"] }
clap = { version = "4.3.17", features = ["derive"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s" 
